--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -504,7 +504,7 @@
             <div class="nav-group">
                 <div class="nav-group-title">Finance</div>
                 <div class="nav-item">
-                    <a href="/Billing" class="nav-link">
+                    <a href="~/StudentBilling" class="nav-link">
                         <i class="nav-icon fas fa-file-invoice-dollar"></i>
                         <span class="nav-text">Student Billing</span>
                     </a>
